# OpenKlaw

./: .gitignore  README.md  app.go  eslint.config.js  go.mod  main.go  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts  wails.json
.ralph/: AGENT.md  PROMPT.md  fix_plan.md
.ralph/specs/: research-competitors.md  research-insights.md  research-workflow.md  workflow.md
docs/: ARCHITECTURE.md  INSTALL.md  pm-decisions.md  pm-excel-spec.md  research-excel.md
docs/bugs/: 20250207-initial-qa.md
frontend/: tailwind.config.js
frontend/src/: App.svelte  style.css
frontend/wailsjs/go/: models.ts
internal/agent/: agent.go
internal/config/: config.go
internal/kakao/: server.go
scripts/: parse_hwp.py  test-hwp.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/: file-parser.ts  gateway-client.ts  index.ts  skills-loader.ts
src/lib/components/: Chat.svelte  DataPreview.svelte  GlassCard.svelte  Header.svelte  OnboardingModal.svelte  QuickActions.svelte  SettingsModal.svelte  Sidebar.svelte  StatCard.svelte  index.ts
src/lib/ollama/: client.ts
src/lib/skills/: email.ts  index.ts  spreadsheet.ts
src/lib/stores/: chat-store.ts  gateway-store.ts
src/lib/tools/: hwp-parser.ts  index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/settings/: +page.svelte
tests/: ollama.test.ts  skills.test.ts  spreadsheet.test.ts  tools.test.ts
(+4 files in other folders)
