[package]
name = "dubai-crab"
version = "0.1.0"
description = "한국 사무직을 위한 로컬 AI 비서"
authors = ["HariFatherKR"]
edition = "2021"
license = "MIT"
homepage = "https://dubaicrab.ai"
repository = "https://github.com/HariFatherKR/DubaiCrab"

[lib]
name = "dubai_crab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
